Wed Jun  6 09:17:49 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/TimeUtilities.h:
          Use truncate_cast

Wed Jun  6 06:46:14 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/VariousTopicsEvent/Conn_Valuetype/VT_Valuetype_Connector.idl:
        * connectors/dds4ccm/tests/VariousTopicsState/Conn_Valuetype/VTS_Valuetype_Connector.idl:
          OpenDDS doesn't support valuetype as topic. Added a string connector
          to the idl as replacement for valuetype, that way the msvc linker
          does generate the library and this test will than deploy

Wed Jun  6 06:03:29 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
          When a different domain id is set, also set the rtps discovery
          for that domain

Wed Jun  6 05:37:36 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
          Removed hand_shake_timeout_ setting, use the OpenDDS default. Added
          DDS4CCM_OPENDDS_LOG_LEVEL and DDS4CCM_OPENDDS_TRANSPORT_LOG_LEVEL to
          control OpenDDS logging through environment variables

Tue Jun  5 19:15:52 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/Utils.h:
          Added export macro

Tue Jun  5 10:22:38 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        Merged branch DDS4CCM_QOS_Handler to trunk.
        Making the DDS4CCM independant of the DDS vendor.

          commit a096657b276c719b3d9b29f61431f7f16b2774f7
          Merge: 6f6e689 f1bc8fc
          Author: Marcel Smit <msmit@remedy.nl>
          Date:   Tue Jun 5 12:12:24 2012 +0200

              Merge branch 'master' into DDS4CCM_QOS_Handler

          commit 6f6e6893ae6571abe5239ffa7c0d867dac938378
          Author: Marcel Smit <msmit@remedy.nl>
          Date:   Tue Jun 5 12:00:41 2012 +0200
